Closed Bug 296219 Opened 21 years ago Closed 21 years ago

zooming down makes bullets bigger

Categories

(Core :: Layout, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.8beta3

People

(Reporter: ian, Assigned: dbaron)

References

Details

Attachments

(1 file)

STEPS TO REPRODUCE 1. Find a page with a bullet, like http://☺.damowmow.com/. 2. Hit Ctrl-- many times. ACTUAL RESULTS Watch bullets grow suddenly. EXPECTED RESULTS Bullets get smaller.
Status: NEW → ASSIGNED
Whiteboard: [patch]
Target Milestone: --- → mozilla1.8beta3
Comment on attachment 185020 [details] [diff] [review] patch Yeah, this works, and the old code really didn't make sense, in particular, this bit: if (bulletSize < 1) { bulletSize = MIN_BULLET_SIZE; }
Attachment #185020 - Attachment description: patch (untested) → patch
Attachment #185020 - Flags: superreview?(roc)
Attachment #185020 - Flags: review?(roc)
Attachment #185020 - Flags: superreview?(roc)
Attachment #185020 - Flags: superreview+
Attachment #185020 - Flags: review?(roc)
Attachment #185020 - Flags: review+
Comment on attachment 185020 [details] [diff] [review] patch really low risk patch
Attachment #185020 - Flags: approval1.8b3?
Attachment #185020 - Flags: approval1.8b3? → approval1.8b3+
Fix checked in to trunk, 2005-06-20 14:25 -0700.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
I believe this should fix bug 53995 comment 65 !?
Blocks: 53995
[Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8b2) Gecko/20050629] (nightly) (W98SE) V.F.
Status: RESOLVED → VERIFIED
OS: Linux → All
Whiteboard: [patch]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: