Zooming way down should not make bullets larger.  b=296219  r+sr=roc  a=asa